# layout-viewer

./: 404.html  Cargo.toml  LICENSE.txt  README.md  Trunk.toml  index.html  lv-native.code-workspace  lv-wasm.code-workspace  styles.css  test.sh
.github/workflows/: static.yml
assets/gds/: ABOUT
assets/gds/test/: SimpleBoth.gds  SimpleMirror.gds  (+4 more)
public/: ABOUT  intel-4004.gds  mos-6502.gds
public/test/: SimpleBoth2.gds
rust/: Cargo.toml  README.md  index.html  open_svg.sh  styles.css  test.sh
rust/src/: bounds.rs  cells.rs  controller.rs  gl_backend.rs  gl_camera.rs  gl_desktop.rs  gl_geometry.rs  gl_material.rs  gl_mesh.rs  gl_renderer.rs  gl_scene.rs  gl_window.rs  id_map.rs  interner.rs  layer.rs  lib.rs  main.rs  project.rs  render_layer.rs  string_interner.rs  svg_backend.rs  vec2d.rs
rust/src/pages/: home.rs  layout.rs  mod.rs
src/: app_controller.rs  app_shaders.rs  app_window.rs  cells.rs  cli.rs  colors.rs  controller.rs  generate_svg.rs  gl_backend.rs  gl_camera.rs  gl_geometry.rs  gl_material.rs  gl_mesh.rs  gl_renderer.rs  gl_scene.rs  gl_viewport.rs  gl_window.rs  id_map.rs  layer.rs  lib.rs  project.rs  resize_observer.rs  string_interner.rs  svg_backend.rs
src/components/: app.rs  home_page.rs  mod.rs  sidebar.rs  toast.rs  viewer_page.rs
src/core/: cells.rs  layer.rs  mod.rs  project.rs
src/graphics/: bounds.rs  camera.rs  geometry.rs  material.rs  mesh.rs  mod.rs  renderer.rs  scene.rs  viewport.rs
src/pages/: home.rs  layout.rs  mod.rs  viewer.rs
src/rsutils/: colors.rs  id_map.rs  mod.rs  resize_observer.rs  string_interner.rs
