[package]
name = "layout-viewer"
version = "0.1.0"
edition = "2021"
description = "A GDSII layout viewer with SVG export capability"

[lib]
name = "layout_viewer"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "layout-viewer"
path = "src/main.rs"

[dependencies]
gds21 = "0.2.0"
anyhow = "1.0"
wasm-bindgen = "0.2"
svg = "0.13"
colored = "2.0"
fastrand = "2.3.0"
geo = "0.29.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = 3
lto = true 
