[package]
name = "layout-viewer"
version = "0.1.0"
edition = "2021"
description = "A GDSII layout viewer with SVG export capability"

[lib]
name = "layout_viewer"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "layout-viewer"
path = "src/main.rs"

[dependencies]
gds21 = "0.2.0"
anyhow = "1.0"
wasm-bindgen = "0.2"
svg = "0.13"
colored = "2.0"
fastrand = "2.3.0"
geo = "0.29.3"
indexmap = "2.2"
i_overlay = "2.0.0"
winit = "0.29"
glow = "0.13"
raw-window-handle = "0.5"
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.32"
bytemuck = "1.14"
approx = "0.5"

[patch.crates-io]
geo = { git = "https://github.com/georust/geo.git", rev = "2daf7cf" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "WebGl2RenderingContext"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.31"
glutin-winit = "0.4"

[profile.release]
opt-level = 3
lto = true 
